--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <div class="blog-entry">
               <a href="https://ieeexplore.ieee.org/document/8487879" target="_blank"><img src="images/pub1.jpg" alt="Image placeholder" class="img-fluid"></a>
               <div class="blog-entry-text">
-                <h3><a href="">Political Sentiment Assessment through Social Media</a></h3>
+                <h3><a href="   ">Political Sentiment Assessment through Social Media</a></h3>
                 <p class="mb-4">International Conference on Data Science and Analytics</p>
 
                 <div class="meta">
@@ -369,7 +369,7 @@
             <div class="blog-entry">
               <a href="https://ieeexplore.ieee.org/document/8487879" target="_blank"><img src="images/pub2.jpg" alt="Image placeholder" class="img-fluid"></a>
               <div class="blog-entry-text">
-                <h3><a href="https://ieeexplore.ieee.org/document/8487879">Political Sentiment Analysis through Social Media</a></h3>
+                <h3><a href="https://ieeexplore.ieee.org/document/8487879" target="_blank">Political Sentiment Analysis through Social Media</a></h3>
                 <p class="mb-4">2018 Second International Conference on Computing Methodologies and Communication (ICCMC) IEEE</p>
 
                 <div class="meta">
