--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <h2>About <strong>Me</strong></h2>
             </div>
             <p class="lead">Engineer | Thinker | Reader | Guitarist</p>
-            <p class="mb-5  ">I am Data Science enthusiast with Masters degree in Computer Engineering. I have worked on Machine learning, Deep Learning, Natural Language Processing & Image Processing. Successfully presented & published two papers in IEEE conferences. Currently seeking full time opportunities in Data Science. Apart from Data Science I like to read books and play Guitar.</p>
+            <p class="mb-5  ">I am Data Scientist with Masters degree in Computer Engineering. I have worked on Machine learning, Deep Learning, Natural Language Processing & Image Processing. Successfully presented & published two papers in IEEE conferences. Currently working as full time Data Scientist. Apart from Data Science I like to read books and play Guitar.</p>
 
             <p>
               <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
