--- a/index.html
+++ b/index.html
@@ -147,7 +147,66 @@
 
 	
 
+    <section class="site-section bg-light " id="section-resume">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 mb-5">
+            <div class="section-heading text-center">
+              <h2>My <strong>Resume</strong></h2>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <h2 class="mb-5">Education</h2>
+            <div class="resume-item mb-4">
+              <span class="date"><span class="icon-calendar"></span> August 2016 - October 2018</span>
+              <h3>Master's in Copmuter Engineering</h3>
+              <p>8.01 CGPA</p>
+              <span class="school">Pune University</span>
+            </div>
 
+            <div class="resume-item mb-4">
+              <span class="date"><span class="icon-calendar"></span> August 2011 - August 2014</span>
+              <h3>Bachelor's in Copmuter Engineering</h3>
+              <p>64.04%</p>
+              <span class="school">Pune University</span>
+            </div>
+
+            <div class="resume-item mb-4">
+              <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
+              <h3>Diploma in Copmuter Engineering</h3>
+              <p>77.45%</p>
+              <span class="school">MSBTE</span>
+            </div>
+
+          </div>
+          <div class="col-md-6">
+            
+
+            <h2 class="mb-5">Experience</h2>
+
+            <div class="resume-item mb-4">
+              <span class="date"><span class="icon-calendar"></span> December 2019 - Present</span>
+              <h3>Data Scientist</h3>
+              <p>Responsible for analyzing data and identifying problem statements, design & implement end to end solution leading to enhanced user engagement for rewards/loyalty programs.</p>
+            </div>
+
+            <div class="resume-item mb-4">
+              <span class="date"><span class="icon-calendar"></span> February 2019 - December 2019</span>
+              <h3>Data Science Consultant</h3>
+              <p>Provided solutions based on data to increase user engagement for movie broadcast channels. Development & deployment of NLP POCs.</p>
+            </div>
+
+            <div class="resume-item mb-4">
+              <span class="date"><span class="icon-calendar"></span> May 2019 - November 2019</span>
+              <h3>Technical Reviewer</h3>
+              <p>Provided a technical review for the coursework of 'Masters Interactive Data Visualization with Python'.</p>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+    </section> <!-- .section -->
 
 
 
