--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="col-md-9">
             <div class="skill">
-              <h3>Python/C</h3>
+              <h3>Python</h3>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                   <span>75%</span>
@@ -96,16 +96,25 @@
             </div>
  	    
 	    <div class="skill">
-              <h3>MySQL/MongoDB</h3>
+              <h3>MySQL</h3>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <span>75%</span>
+                <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                  <span>60%</span>
                 </div>
               </div>
             </div>
 
             <div class="skill">
-              <h3>Machine Learning/Deep Learning</h3>
+              <h3>Data Analytics/Visualization</h3>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                  <span>80%</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="skill">
+              <h3>Machine Learning/Deep Learning`</h3>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
                   <span>65%</span>
@@ -116,27 +125,18 @@
             <div class="skill">
               <h3>Natural Language Processing(NLP)</h3>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <span>75%</span>
-                </div>
-              </div>
-            </div>
-
-            <div class="skill">
-              <h3>Tableau</h3>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                  <span>70%</span>
+                <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                  <span>65%</span>
                 </div>
               </div>
             </div>
 		
               
             <div class="skill">
-              <h3>Hadoop(Pig, Hive)</h3>
+              <h3>DevOps/AWS</h3>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                  <span>50%</span>
+                <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                  <span>60%</span>
                 </div>
               </div>
             </div>
